tests/NormalTests/paczka1/small_fuzzy/24888760.err
Error in line 4: geLOfwPQS S,,9 88,6
Error in line 15: geLOfwPQS S229 257,8
